P5 E-Learning/force-app/main/default/objects/Module_User_History__c/Module_User_History__c.object-meta.xml
<CustomObject>
    <label>Module_User_History</label>
    <nameField>
        <label>Module_User_History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modules_Users_Historys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>