P5 E-Learning/force-app/main/default/objects/Module_User_History__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <label>Email Recipient</label>
    <type>Email</type>
</CustomField>