P5 E-Learning/force-app/main/default/objects/Module_User_History__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Modules_Users_Historys</relationshipLabel>
    <relationshipName>Modules_Users_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>