P5 E-Learning/force-app/main/default/objects/Module_User_History__c/fields/Percent__c.field-meta.xml
<CustomField>
    <fullName>Percent__c</fullName>
    <description>El porcentaje de avance de módulos se tiene que calcular automáticamente, basado en la cantidad de unidades completadas.</description>
    <formula>(( Unit_User_history_complete__c  / Module__r.Cant_Units__c  ) * 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>