P5 E-Learning/force-app/main/default/objects/Module_User_History__c/fields/PointsModule__c.field-meta.xml
<CustomField>
    <fullName>PointsModule__c</fullName>
    <label>PointsModule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>